[java] security, class loader & fixes